packages/next-swc/crates/next-custom-transforms/tests/errors/strip-page-exports/static-paths-after-server-side/input.js
export { a as getServerSideProps } from './input'
export { getStaticPaths } from 'a'
